--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-contentful": "^2.0.10",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
+    "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
