--- a/cloud-functions-sendmail/firebase.json
+++ b/cloud-functions-sendmail/firebase.json
@@ -1,1 +1,10 @@
-{}
+{
+  "hosting": {
+    "public": "portfolio/build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
+  }
+}
