--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-contentful": "^2.0.10",
     "react-dom": "^16.13.1",
+    "react-intl": "^4.7.1",
     "react-markdown": "^4.3.1",
     "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.2.0",
